--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.3.4.RELEASE</version>
+		<version>2.4.2</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.furqan</groupId>
@@ -15,8 +15,8 @@
 	<description>HAPI FHIR Server Setup</description>
 
 	<properties>
-		<java.version>14</java.version>
-		<hapi.fhir.version>5.1.0</hapi.fhir.version>
+		<java.version>15</java.version>
+		<hapi.fhir.version>5.2.1</hapi.fhir.version>
 	</properties>
 
 	<dependencies>
@@ -64,7 +64,6 @@
 			<artifactId>hapi-fhir-server</artifactId>
 			<version>${hapi.fhir.version}</version>
 		</dependency>
-
 
 	</dependencies>
 
